dependencies/charon/charon/tests/ui/rename_attribute_failure.out
error: Error parsing attribute: attribute `rename` should not be empty
 --> tests/ui/rename_attribute_failure.rs:6:1
  |
6 | #[charon::rename("")]
  | ^^^^^^^^^^^^^^^^^^^^^

error: Error parsing attribute: attribute `rename` should contain a valid identifier
 --> tests/ui/rename_attribute_failure.rs:9:1
  |
9 | #[charon::rename("Test!976?")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Error parsing attribute: attribute `rename` should contain a valid identifier
  --> tests/ui/rename_attribute_failure.rs:12:1
   |
12 | #[charon::rename("75Test")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Error parsing attribute: the new name should be between quotes: `rename("aaaa")`.
  --> tests/ui/rename_attribute_failure.rs:15:1
   |
15 | #[charon::rename(aaaa)]
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: There should be at most one `charon::rename("...")` or `aeneas::rename("...")` attribute per declaration
  --> tests/ui/rename_attribute_failure.rs:20:1
   |
20 | pub type TestMultiple = ();
   | ^^^^^^^^^^^^^^^^^^^^^

error: Error parsing attribute: Unrecognized attribute: `charon::something_else("_Type36")`
  --> tests/ui/rename_attribute_failure.rs:22:1
   |
22 | #[charon::something_else("_Type36")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

ERROR Charon failed to translate this code (6 errors)
